# authz-schema-sync-check

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  MANIFEST.in  README.md  models.py  mypy.ini  pyproject.toml  ruff.toml  schema.zed  test_output.py
authz_schema_sync_check/: __init__.py  __main__.py  analyzer.py  cli.py  errors.py  generator.py  git.py  git_utils.py  parser.py  py_resources.py  test_output.py  ts_resource.ts  validator.py
authz_schema_sync_check/templates/: default_types.py.jinja  default_types.ts.jinja  types.py.jinja  types.ts.jinja
authz_schema_sync_check/tests/: __init__.py  test_cli.py  test_generator.py  test_git_utils.py  test_parser.py
authz_schema_sync_check/tests/fixtures/: valid_generated_file.py  valid_models.py  valid_schema.zed
authz_schema_sync_check/tree-sitter-spicedb/: package.json  pnpm-lock.yaml
tests/: test_analyzer.py  test_cli.py  test_generator.py  test_git.py  test_parser.py  test_validator.py
tests/fixtures/: invalid_models.py  invalid_schema.zed  valid_models.py
