[project]
name = "authz-schema-sync-check"
version = "0.1.0"
description = "A pre-commit hook for checking and syncing authz schema"
authors = [
    {name = "Yahia Mahmoud",email = "yahia.mahmoud@tacto.ai"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter-python (>=0.23.6,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
