[project]
name = "authz-schema-sync-check"
version = "0.1.0"
description = "A pre-commit hook for checking and syncing authz schema"
authors = [
    {name = "Yahia Mahmoud",email = "yahia.mahmoud@tacto.ai"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "ruff (>=0.11.6,<0.12.0)",
    "tree-sitter (>=0.21.0,<0.22.0)",
    "setuptools (>=79.0.0,<80.0.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
]

[project.scripts]
authz-schema-sync-check = "authz_schema_sync_check.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = ["tree-sitter-spicedb/**/*"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
types-colorama = "^0.4.15.20240311"
pytest-mock = "^3.14.0"
